force-app/main/default/objects/AH_Account_Product__c/AH_Account_Product__c.object-meta.xml
<CustomObject>
    <label>Related Opportunity Line Item</label>
    <nameField>
        <displayFormat>ROLI-{0000}</displayFormat>
        <label>Related Opportunity Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Opportunity Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>