force-app/main/default/objects/AH_Account_Product__c/fields/Deployment_Instance__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Instance</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>AH_Account_Products</relationshipName>
    <type>Lookup</type>
</CustomField>