force-app/main/default/objects/AH_Account_Product__c/listViews/Opportunity_Migrate_Las_Vegas_Propertie.listView-meta.xml
<ListView>
    <fullName>Opportunity_Migrate_Las_Vegas_Propertie</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>Migrate Las Vegas Properties</value>
    </filters>
    <label>Opportunity: Migrate Las Vegas Propertie</label>
    <language>en_US</language>
    <sharedTo>
        <group>Cancellations_Edit_General_Reason</group>
    </sharedTo>
</ListView>